fix: fix navbar & horizontal scroll

--- a/components/ui/radix/navbar/styles.css
+++ b/components/ui/radix/navbar/styles.css
@@ -10,6 +10,10 @@ p {
   all: unset;
 }
 
+button {
+  cursor: pointer;
+}
+
 li {
   list-style: none;
 }
@@ -19,7 +23,7 @@ li {
   top: 0;
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: space-between;
   gap: 0 10px;
   z-index: 51;
 
@@ -27,10 +31,14 @@ li {
   backdrop-filter: saturate(180%) blur(8px);
 }
 
+nav.NavigationMenuRoot > div:first-child {
+  width: 100%;
+}
+
 .NavigationMenuList {
-  width: 100vw;
+  width: 100%;
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   /* background-color: white; */
   padding: 4px;
   list-style: none;
@@ -234,10 +242,12 @@ li {
 .ViewportPosition {
   position: absolute;
   display: flex;
-  justify-content: center;
-  width: 90%;
+  justify-content: flex-end;
+  width: 80%;
   top: 100%;
+  right: 0;
   perspective: 2000px;
+  margin: 0 auto;
 }
 
 .CaretDown {
